refactor and make it better